fix blur on safari

--- a/login.css
+++ b/login.css
@@ -37,6 +37,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    transform: translate3d(0, 0, 0);
     -webkit-backdrop-filter: blur(25px);
     backdrop-filter: blur(25px);
     box-shadow: 0px 4px 10px rgba(0,0,0,.2)
